<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/jusnav_home"
            android:icon="@drawable/baseline_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/jusnav_settings"
            android:icon="@drawable/baseline_settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/jusnav_share"
            android:icon="@drawable/share_244"
            android:title="@string/share"/>

        <item
            android:id="@+id/jusnav_about"
            android:icon="@drawable/info"
            android:title="@string/about_us"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/jusnav_logout"
                android:icon="@drawable/baseline_exit"
                android:title="@string/logout"/>
        </menu>

    </item>

</menu>