<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCBC">

    <TextView
        android:id="@+id/justvFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/justin"
        android:textSize="25sp"
        android:textColor="#0000FF"
        android:textStyle="bold"
        android:rotation="45"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/justvLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chipman"
        android:textSize="25sp"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:rotation="-45"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/justvFirstName"/>

    <ToggleButton
        android:id="@+id/justoggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/auto_rotate"
        android:textOn="@string/portrait_mode"
        android:layout_below="@id/justvCheckboxValue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/justvEmailValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/justvLastName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/justvIDValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/justvEmailValue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/justvCheckboxValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/justvIDValue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

</RelativeLayout>
